Fix vertical alignment

--- a/src/components/language-selector/src/language.scss
+++ b/src/components/language-selector/src/language.scss
@@ -16,6 +16,7 @@ $language-switcher-chevron-size: 15px;
     border: $input-border-width solid $color-input;
     border-radius: 3px;
     background: transparent;
+    line-height: 1;
     text-align: left;
 
     transition: border-color 0.2s ease-in-out;
